# NoisiQ

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  License  README.md  ROADMAP.md  Schedule.md  backend_strategy_analysis.md  noisiq_gantt_chart.html  pyproject.toml  test_tsim.py  test_tsim_state.py  theme.md
.github/workflows/: ci.yml
docs/: documentation.ipynb
noisiq/: __init__.py
noisiq/backends/: __init__.py  backend_selector.py  base.py  many_shot_runner.py  pauli_frame.py  trajectory_backend.py  tsim_backend.py
noisiq/ir/: __init__.py  circuit.py  gates.py
noisiq/noise/: __init__.py  kraus_channels.py
noisiq/results/: __init__.py  type.py
noisiq/visualization/: __init__.py  animation.py  drawer.py  gate_info.py  heatmap.py  theme.py  widgets.py
noisiq/visualization/charts/: __init__.py  charts.py
scripts/: run_tsim.py  run_tsim_state.py
src/noisiq/backends/: __init__.py  backend_selector.py  many_shot_runner.py  pauli_frame.py  trajectory_backend.py  tsim_backend.py
src/noisiq/ir/: __init__.py  circuit.py  gates.py
src/noisiq/noise/: amplitude_damping.py  kraus_channels.py  pauli_channels.py  pauli_error.py  t2_dephasing.py
src/noisiq/results/: type.py
src/noisiq/visualization/: circuit_diagram.py  export.py  pauli_frame_tracker.py
src/noisiq/visualization/charts/: heatmap.py
tests/: test_circuit.py  test_gates.py
tests/backends/: test_backend_selector.py  test_many_shot_runner.py  test_randomized.py  test_stim_backend.py  test_stim_correctness.py  test_trajectory.py  test_tsim_backend.py
tests/noise/: test_kraus_channels.py  test_pauli.py  test_paulichannel.py
tests/visualization/: test_charts.py  test_heatmap.py  test_theme.py
weekly_notebooks/: noisiq_demo.ipynb  week_10_notebook.ipynb  week_1_notebook.ipynb  week_2_notebook.ipynb  week_3_notebook.ipynb  week_4_notebook.ipynb  week_5_notebook.ipynb  week_6_notebook.ipynb  week_7_notebook.ipynb  week_8_notebook.ipynb  week_9_notebook.ipynb
