# =============================================================================
# NOISIQ — pyproject.toml
# =============================================================================
# This is the source file for noisiq package definition.
#
# Following the modern PEP 517/518 standard, which is the current best
# practice for Python packaging and is required for publishing to PyPI.
# =============================================================================


# -----------------------------------------------------------------------------
# BUILD SYSTEM
# -----------------------------------------------------------------------------
# Tells pip which tool to use to build the package.
# We use "hatchling" — it is lightweight, modern, and has no configuration
# overhead compared to older tools like setuptools.
# -----------------------------------------------------------------------------
[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"


# -----------------------------------------------------------------------------
# PROJECT METADATA
# -----------------------------------------------------------------------------
# This is what PyPI and pip read when a user runs `pip install noisiq`.
# Every field here will appear on the PyPI project page once published.
# -----------------------------------------------------------------------------
[project]
name            = "noisiq"
version         = "0.1.0"
description     = "Noise-aware quantum circuit simulation and visualization."
readme          = "README.md"
license         = { file = "LICENSE" }
requires-python = ">=3.10"

# Keywords to improve discoverability on PyPI
keywords = [
    "quantum computing",
    "quantum circuits",
    "noise simulation",
    "error propagation",
    "quantum error",
    "visualization",
    "physics",
]

# PyPI classifiers, standardized tags to help users find the package.
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Visualization",
    "Typing :: Typed",
]

# Author information 
authors = [
    { name = "David Saxum",   email = "<dtsaxum@ucla.edu>"  },
    { name = "Teddy Jones",   email = "<ejones43@g.ucla.edu>"  },
    { name = "Giovanni Castorina",     email = "<gio-email>"    },
]


# -----------------------------------------------------------------------------
# RUNTIME DEPENDENCIES
# -----------------------------------------------------------------------------
# These are the libraries a user needs to have installed to run noisiq and will.
# install when someone runs `pip install noisiq`.
#
# Version pins use >= to set a minimum version.
#
# Keep list lean. 
# -----------------------------------------------------------------------------
dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.7",
    "ipywidgets>=8.0",
]


# -----------------------------------------------------------------------------
# OPTIONAL DEPENDENCIES
# -----------------------------------------------------------------------------
# `pip install noisiq[dev]`     — installs everything needed for development
# `pip install noisiq[notebook]` — installs Jupyter for running demo notebooks
# `pip install noisiq[adapters]` — installs circuit framework adapters
# -----------------------------------------------------------------------------
[project.optional-dependencies]

# Test-only dependencies — required to run the test suite
test = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

# Development tools — required to contribute to noisiq
dev = [
    "pytest>=7.4",           # Test runner
    "pytest-cov>=4.1",       # Test coverage reporting
    "jupyter>=1.0",          # Jupyter notebook environment
    "ipywidgets>=8.0",       # Interactive widgets inside notebooks
    "ipympl>=0.9",           # Interactive matplotlib inside notebooks
    "ruff>=0.4",             # Fast Python linter and formatter (replaces flake8+black)
]

# Notebook-only install (for users who want to run demo notebooks)
notebook = [
    "jupyter>=1.0",
    "ipywidgets>=8.0",
    "ipympl>=0.9",
]

# Circuit framework adapters, look into versions and other common options
adapters = [
    # "qiskit>=1.0",        
    # "cirq>=1.3",          
]


# -----------------------------------------------------------------------------
# PROJECT URLS
# -----------------------------------------------------------------------------
# Links that appear on the PyPI project page.
# -----------------------------------------------------------------------------
[project.urls]
Homepage      = "https://github.com/<dtsaxum-oss>/noisiq"
Repository    = "https://github.com/<dtsaxum-oss>/noisiq"
Issues        = "https://github.com/<dtsaxum-oss>/noisiq/issues"
Changelog     = "https://github.com/<dtsaxum-oss>/noisiq/blob/main/CHANGELOG.md"


# -----------------------------------------------------------------------------
# PYTEST CONFIGURATION
# -----------------------------------------------------------------------------
# Controls how pytest discovers and runs tests.
# -----------------------------------------------------------------------------
[tool.pytest.ini_options]

# Where pytest looks for tests
testpaths = ["tests"]

# Flags applied on every test run:
#   -v           — verbose output (shows each test name as it runs)
#   --tb=short   — shorter traceback format on failure (easier to read)
addopts = "-v --tb=short"

# Ensures that any test file named test_*.py is discovered automatically
python_files   = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]


# -----------------------------------------------------------------------------
# RUFF CONFIGURATION (Linter + Formatter)
# -----------------------------------------------------------------------------
# Ruff is a fast, modern replacement for flake8 (linting) and black (formatting).
# It enforces PEP 8 style and catches common errors before code review.
#
# Run manually with:
#   ruff check .         — lint the whole project
#   ruff format .        — auto-format the whole project
# -----------------------------------------------------------------------------
[tool.ruff]

# Maximum line length — matches the 88-character standard from CONTRIBUTING.md
line-length = 88

# Which Python version to target for syntax checking
target-version = "py310"

# Folders ruff should never lint
exclude = [
    ".venv",
    "build",
    "dist",
    "__pycache__",
    "*.egg-info",
]

[tool.ruff.lint]

# Rule sets to enforce:
#   E, W  — PEP 8 style errors and warnings (core Python style)
#   F     — Pyflakes (unused imports, undefined names, etc.)
#   I     — isort (import ordering)
#   UP    — pyupgrade (modernize Python syntax automatically)
select = ["E", "W", "F", "I", "UP"]

# Rules to ignore — these are intentionally relaxed for a research codebase:
#   E501  — line too long (we handle this with the line-length setting above)
ignore = ["E501"]


# -----------------------------------------------------------------------------
# HATCHLING BUILD CONFIGURATION
# -----------------------------------------------------------------------------
# Tells hatchling exactly which files belong in the installed package.
# Without this, the build tool might accidentally include test files,
# notebooks, or other non-package content in the distributed wheel.
# -----------------------------------------------------------------------------
[tool.hatch.build.targets.wheel]
packages = ["noisiq"]